# OpenSkeletonFitting

./: CMakeLists.txt  OpenSkeletonFitting.sln  README.md
CMinPack/: cminpack.vcxproj  cminpack_dll.vcxproj
CMinPack/examples/: lmddrvc  lmfdrvc  tlmder1_  tlmder1c
CMinPack/examples/ref/: ._tlmstr1c.ref
Doc/: OpenSF.docx
OpenSF/: CMakeLists.txt  Exception.cpp  Exception.h  Factory.h  Logging.cpp  Logging.h  Module.cpp  Module.h  ModuleInput.cpp  ModuleInput.h  ModuleOutput.cpp  ModuleOutput.h  OpenSF.vcxproj  Timer.cpp  Timer.h  Utils.cpp  Utils.h  precompiled.h
OpenSFApp/: CMakeLists.txt  OpenSFApp.vcxproj  main.cpp
OpenSFFeatures/: CMakeLists.txt  FeaturePoint.cpp  FeaturePoint.h  FeatureTracking.cpp  FeatureTracking.h  Features.cpp  Features.h  FeaturesFactory.h  GeodesicDistMap.cpp  GeodesicDistMap.h  OpenSFFeatures.vcxproj  precompiled.h
OpenSFInput/: CMakeLists.txt  Input.cpp  Input.h  InputFactory.h  InputKinect.cpp  InputKinect.h  InputNumbered.cpp  InputNumbered.h  InputPlayerONI.cpp  InputPlayerONI.h  OpenSFInput.vcxproj  precompiled.h
OpenSFLib/: CMakeLists.txt  OpenSFLib.vcxproj  System.cpp  System.h  precompiled.cpp  precompiled.h
OpenSFSegmentation/: Background.cpp  Background.h  BackgroundFactory.h  BackgroundFirst.cpp  BackgroundFirst.h  CMakeLists.txt  OpenSFSegmentation.vcxproj  Segmentation.cpp  Segmentation.h  SegmentationBackground.cpp  SegmentationBackground.h  SegmentationFactory.h  precompiled.h
OpenSFVis/: CMakeLists.txt  OpenSFVis.vcxproj  Visualization2d.cpp  Visualization2d.h  Visualization3d.cpp  Visualization3d.h  main.cpp
OpenSFitting/: CMakeLists.txt  Constraint.cpp  Constraint.h  Fitting.cpp  Fitting.h  FittingFactory.h  Joint.cpp  Joint.h  OpenSFitting.vcxproj  Skeleton.cpp  Skeleton.h  SkeletonCommon.cpp  SkeletonCommon.h  SkeletonFitting.cpp  SkeletonFitting.h  SkeletonHuman.cpp  SkeletonHuman.h  SkeletonManipulator.cpp  SkeletonManipulator.h  precompiled.h
